; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_load_global.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_load_global.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"load global %s\0A\00", align 1
@MP_MAP_LOOKUP = common dso_local global i32 0, align 4
@mp_module_builtins_globals = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@MICROPY_ERROR_REPORTING = common dso_local global i64 0, align 8
@MICROPY_ERROR_REPORTING_TERSE = common dso_local global i64 0, align 8
@mp_type_NameError = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"name not defined\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"name '%q' isn't defined\00", align 1
@mp_module_builtins_override_dict = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_load_global(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @qstr_str(i32 %4)
  %6 = call i32 @DEBUG_OP_printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = call %struct.TYPE_8__* (...) @mp_globals_get()
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @MP_OBJ_NEW_QSTR(i32 %9)
  %11 = load i32, i32* @MP_MAP_LOOKUP, align 4
  %12 = call %struct.TYPE_6__* @mp_map_lookup(i32* %8, i32 %10, i32 %11)
  store %struct.TYPE_6__* %12, %struct.TYPE_6__** %3, align 8
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %14 = icmp eq %struct.TYPE_6__* %13, null
  br i1 %14, label %15, label %34

15:                                               ; preds = %1
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @MP_OBJ_NEW_QSTR(i32 %16)
  %18 = load i32, i32* @MP_MAP_LOOKUP, align 4
  %19 = call %struct.TYPE_6__* @mp_map_lookup(i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @mp_module_builtins_globals, i32 0, i32 0), i32 %17, i32 %18)
  store %struct.TYPE_6__* %19, %struct.TYPE_6__** %3, align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %21 = icmp eq %struct.TYPE_6__* %20, null
  br i1 %21, label %22, label %33

22:                                               ; preds = %15
  %23 = load i64, i64* @MICROPY_ERROR_REPORTING, align 8
  %24 = load i64, i64* @MICROPY_ERROR_REPORTING_TERSE, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %22
  %27 = call i32 @mp_raise_msg(i32* @mp_type_NameError, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  br label %32

28:                                               ; preds = %22
  %29 = load i32, i32* %2, align 4
  %30 = call i32 @mp_obj_new_exception_msg_varg(i32* @mp_type_NameError, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0), i32 %29)
  %31 = call i32 @nlr_raise(i32 %30)
  br label %32

32:                                               ; preds = %28, %26
  br label %33

33:                                               ; preds = %32, %15
  br label %34

34:                                               ; preds = %33, %1
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  ret i32 %37
}

declare dso_local i32 @DEBUG_OP_printf(i8*, i32) #1

declare dso_local i32 @qstr_str(i32) #1

declare dso_local %struct.TYPE_6__* @mp_map_lookup(i32*, i32, i32) #1

declare dso_local %struct.TYPE_8__* @mp_globals_get(...) #1

declare dso_local i32 @MP_OBJ_NEW_QSTR(i32) #1

declare dso_local i32 @mp_raise_msg(i32*, i8*) #1

declare dso_local i32 @nlr_raise(i32) #1

declare dso_local i32 @mp_obj_new_exception_msg_varg(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
